# aurora-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
deploy/test/: compose.yaml  deploy.yaml
docs/: calc_fields.md
internal/: admin_router.py  api_router.py  auth.py  calc.py  logger.py  settings.py  swpc_req.py  user_router.py  validators.py
internal/db/: config.py  models.py  schemas.py
internal/nooa/: calc.py  nooa_parser.py  nooa_req.py  swpc_req.py  test_calc.py  test_nooa_parser.py
internal/routers/: admin_router.py  api_router.py  user_router.py
migrations/models/: 0_20250112162904_init.py  1_20250112163950_update.py  2_20250119202545_update.py
tests/: test_a.py
